public interface Pagamento {
    public void realizarPagamento(double valor);
}
